--- a/jitter-free-membership.bib
+++ b/jitter-free-membership.bib
@@ -30,3 +30,26 @@
   pages="386--400",
   isbn="978-3-642-24550-3"
 }
+@Inproceedings {smart,
+address      = {Leuven, Belgium},
+author       = {Jacob R. Lorch and Atul Adya and William J. Bolosky and Ronnie Chaiken and John
+                R. Douceur and Jon Howell},
+booktitle    = {Proceedings of the 2006 EuroSys Conference},
+month        = {April},
+pages        = {103–115},
+publisher    = {Association for Computing Machinery, Inc.},
+title        = {The SMART way to migrate replicated stateful services},
+url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=67913},
+year         = {2006},
+}
+@TechReport {reconfiguring-a-state-machine,
+author       = {Leslie Lamport and Dahlia Malkhi and Lidong Zhou},
+month        = {February},
+number       = {MSR-TR-2008-198},
+publisher    = {Microsoft},
+title        = {Reconfiguring a State Machine},
+url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=101824},
+year         = {2008},
+institution  = {Microsoft Research},
+}
+
