--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -909,16 +909,15 @@ send out $\prop{p}{i}$ and which is therefore responsible for the value
 $v_i(p)$ for each $i$.  If $\owner{p}$ has already sent $\prop{p}{i}$ then it
 may not change the value $v_i(p)$ but if desired it may send out $\prop{p}{i}$
 again, since messages may be duplicated. On the other hand if it has not sent
-out $\prop{p}{i}$ then it may change $v_i(p)$ freely.
-
-If $\owner{p}$ has received promises for $p$ in instance $i$ from every node in
-a quorum $q \in Q_{e(p)}$ where $e(p) \le e(i)$ then it may send out
-$\prop{p}{i}$. If any of the promises from nodes in $q$ is of the form
-$\bprom{i}{a}{p}{p'}$ then it must first set \[v_i(p) = v_i\bigl(\mathrm{max}
-\{p' \mid \bprom{i}{a}{p}{p'} \textrm{ received}, a \in q \}\bigr).\] If $i >
-i_\mathrm{max}$ so the value of $e(i)$ is not known then it is sufficient to
-find an earlier instance $i' < i$ and proposal $p'$ such that $\chosen{i'}{p'}$
-and $e(p) \le e(i')$ because $e$ is nondecreasing.
+out $\prop{p}{i}$ then it may change $v_i(p)$ freely. Once it has received
+promises for $p$ in instance $i$ from every node in a quorum $q \in Q_{e(p)}$
+where $e(p) \le e(i)$ then it may send out $\prop{p}{i}$. If any of the
+promises from nodes in $q$ is of the form $\bprom{i}{a}{p}{p'}$ then it must
+first set \[v_i(p) = v_i\bigl(\mathrm{max} \{p' \mid \bprom{i}{a}{p}{p'}
+\textrm{ received}, a \in q \}\bigr).\] If $i > i_\mathrm{max}$ so the value of
+$e(i)$ is not known then it is sufficient to find an earlier instance $i' < i$
+and proposal $p'$ such that $\chosen{i'}{p'}$ and $e(p) \le e(i')$ because $e$
+is nondecreasing.
 
 \subsubsection{Choosing values} Any node may consider phase II to be complete
 for proposal $p$ at instance $i$, and therefore $\chosen{p}{i}$, if
