--- a/jitter-free-membership.tex
+++ b/jitter-free-membership.tex
@@ -911,7 +911,7 @@ above the value $v_i(p)$ of proposal $p$ in instance $i$ may be changed without
 affecting any invariants as long as $\neg\prop{p}{i}$. So as to ensure this,
 each proposal $p$ has a unique node $\owner{p}$ which is the only one that may
 send out $\prop{p}{i}$ and which is therefore responsible for the value
-$v_i(p)$ for each $i$.  If $\owner{p}$ has already sent $\prop{p}{i}$ then it
+$v_i(p)$ for each $i$. If $\owner{p}$ has already sent $\prop{p}{i}$ then it
 may not change the value $v_i(p)$ but if desired it may send out $\prop{p}{i}$
 again, since messages may be duplicated. On the other hand if it has not sent
 out $\prop{p}{i}$ then it may change $v_i(p)$ freely. Once it has received
@@ -924,12 +924,18 @@ $e(i)$ is not known then it is sufficient to find an earlier instance $i' < i$
 and proposal $p'$ such that $\chosen{i'}{p'}$ and $e(p) \le e(i')$ because $e$
 is nondecreasing.
 
-\subsubsection{Choosing values} Any node may consider phase II to be complete
-for proposal $p$ at instance $i$, and therefore $\chosen{p}{i}$, if
+\subsubsection{Choosing values} Any node may deduce $\chosen{p}{i}$ if
 \begin{itemize} \item $e(i) \le e(p) + 1$, \item for each $j \le i - \kappa$
 there is a $p'$ with $\chosen{j}{p'}$, and \item there is a quorum $q \in
 Q_{e(i)}$ such that $\acc{i}{a}{p}$ has been received for every $a \in q$.
 \end{itemize}
+
+\subsubsection{Proposal identifiers} Recall that $\mathbb P$ requires a
+wellfounded total order $\prec$, a function $\mathrm{owner} : \mathbb P \to
+\mathbb A$ and a nondecreasing function $e : \mathbb P \to \mathbb N$. If
+$\mathbb A$ is also wellordered then one possible implementation is $\mathbb N
+\times \mathbb N \times \mathbb A$ with the lexicographic order, where
+$\owner{\langle e, n, a \rangle} = a$ and $e(\langle e, n, a\rangle) = e$.
 
 \section{Discussion}\label{discussion}
 
